# microsimulation

./: .gitignore  CMakeLists.txt  Doxyfile  build_msim.ps1  build_msim.sh  checkNs.sh
res/: Extract-IDs.ps1
res/qrc/: assets.qrc
res/svg/: Extract-IDs.ps1  Extract-IDs_bash.sh  architecture_ids.h  frames_architecture_ids.txt  frames_architecture_ids_old.txt
src/: main.cpp
src/core/common/: architecture_ids.h  id_reader.cpp  id_reader.h  svg_loader.cpp  svg_loader.h
src/core/components/: msim_alu.cpp  msim_alu.h  msim_ar.cpp  msim_ar.h  msim_bit.cpp  msim_bit.h  msim_bus.cpp  msim_bus.h  msim_clock.cpp  msim_clock.h  msim_component.cpp  msim_component.h  msim_connector.cpp  msim_connector.h  msim_cop.cpp  msim_cop.h  msim_cpu.cpp  msim_cpu.h  msim_decoder.cpp  msim_decoder.h  msim_enable_bit.cpp  msim_enable_bit.h  msim_instruction_line.h  msim_line.cpp  msim_line.h  msim_observable_component.cpp  msim_observable_component.h  msim_ram.cpp  msim_ram.h  msim_register.cpp  msim_register.h  msim_rom.cpp  msim_rom.h
src/core/microcode/: addrr_word.cpp  addrr_word.h  decode_word.cpp  decode_word.h  exec_word.cpp  exec_word.h  fetch_word.cpp  fetch_word.h  inst_word.cpp  inst_word.h  msim_wrd.cpp  msim_wrd.h
src/core/parser/: msim_parser.cpp  msim_parser.h  msim_scanner.cpp  msim_scanner.h
src/shared/: architecture_ids.h  component_info.h  constants.h  svg_loader.cpp  svg_loader.h
src/test/: inst_word_tests.cpp  inst_word_tests.h
src/ui/: highlight_label.h  styles.h
src/ui/components/: debug_proxy.h  msim_alu_widget.cpp  msim_alu_widget.h  msim_ar_widget.cpp  msim_ar_widget.h  msim_bit_widget.cpp  msim_bit_widget.h  msim_bus_widget.cpp  msim_bus_widget.h  msim_clock_widget.cpp  msim_clock_widget.h  msim_component_svg_widget.cpp  msim_component_svg_widget.h  msim_component_view.cpp  msim_component_view.h  msim_component_widget.cpp  msim_component_widget.h  msim_connector_widget.cpp  msim_connector_widget.h  msim_cop_widget.cpp  msim_cop_widget.h  msim_decoder_widget.cpp  msim_decoder_widget.h  msim_enable_bit_widget.cpp  msim_enable_bit_widget.h  msim_line_widget.cpp  msim_line_widget.h  msim_ram_widget.cpp  msim_ram_widget.h  msim_register_widget.cpp  msim_register_widget.h  msim_rom_widget.cpp  msim_rom_widget.h
src/ui/controller/: components_factory.cpp  components_factory.h  components_picker_controller.cpp  components_picker_controller.h  connector_factory.cpp  connector_factory.h  decoder_factory.cpp  decoder_factory.h  details_controller.cpp  details_controller.h  editor_controller.cpp  editor_controller.h  line_factory.cpp  line_factory.h  msim_components_manager.cpp  msim_components_manager.h  simulator_controller.cpp  simulator_controller.h
src/ui/drag_and_drop/: drag_item_model.cpp  drag_item_model.h  drop_target.cpp  drop_target.h
src/ui/editor/: editor.cpp  editor.h  editor.ui  microcodelexer.cpp  microcodelexer.h
src/ui/views/: component_picker.cpp  component_picker.h  component_picker.ui  details_tabs.cpp  details_tabs.h  details_view.cpp  details_view.h  details_view.ui  msim_main.cpp  msim_main.h  msim_main.ui  simulator_area.cpp  simulator_area.h  simulator_area.ui  snippet_picker.cpp  snippet_picker.h  snippet_picker.ui
